# Health_monitoring_wristband

./: CMakeLists.txt  README.MD  sdkconfig  sdkconfig.defaults  sdkconfig.old
UML/: activity_motion_detection_and_buzzer.wsd  activity_sensor_share.wsd  activity_web_3d.wsd  sequence_buzzer.wsd  sequence_senser_share.wsd  sequence_web_3d.wsd  timing_fall_buzzer.wsd  timing_sensor_web.wsd  timing_tasks.wsd  usercase.wsd
components/esp32c3_wifi/: esp32c3_wifi.c
components/http_server_app/: CMakeLists.txt  http_server_app.c
components/i2c_bus/: CMakeLists.txt  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
components/max30100/: CMakeLists.txt  max30100.c
components/max30100/include/: max30100.h
components/mpu6050/: CMakeLists.txt  mpu6050.c
components/mpu6050/include/: mpu6050.h
components/ssd1306/: CMakeLists.txt  ssd1306.c
components/ssd1306/include/: ssd1306.h
main/: CMakeLists.txt  health_monitoring_wristband.c  index.html
